# fillit

./: 16.fillit  CMakeCache.txt  CMakeLists.txt  Makefile  create.c  fillit  fillit.cbp  fillit.h  first_check.c  main.c  part_of_Nina.c
fillit.dSYM/Contents/Resources/DWARF/: fillit
includes/: fillit.h
libft/: Makefile  ft_strsub_free.c  libft.h
src/: .main.c.swp  create.c  first_check.c  main.c  part_of_Nina.c
